--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "training",
   "version": "1.0.0",
   "description": "training stuffs",
-  "main": "lib/index.js",
+  "main": "app/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon lib/index.js --exec babel-node --presets es2015,stage-2"
+    "start": "nodemon app/index.js --exec babel-node --presets es2015,stage-2"
   },
   "repository": {
     "type": "git",
