--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express": "^4.15.3",
     "prompt": "^1.0.0",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "readline-sync": "^1.4.7"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
