--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "training",
   "version": "1.0.0",
   "description": "training stuffs",
-  "main": "app/index.js",
+  "main": "day1/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app/index.js --exec babel-node --presets es2015,stage-2"
+    "start": "nodemon day1/index.js --exec babel-node --presets es2015,stage-2"
   },
   "repository": {
     "type": "git",
@@ -18,7 +17,11 @@
   },
   "homepage": "https://github.com/techmmr/training#readme",
   "dependencies": {
+    "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
+    "ejs": "^2.5.6",
     "express": "^4.15.3",
+    "multer": "^1.3.0",
     "prompt": "^1.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
